# ai-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.txt  check_db.py  curriculum.md  debug_imports.py  debug_result.txt  docker-compose.yml  integration_output.txt  pyproject.toml  reindex.py  requirements.txt  run_tests.py  test_directml.py  test_groq.py  test_output.txt
docs/: API_REFERENCE.md  CORE_MODULES_SPEC.md  DEPLOYMENT_GUIDE_FOR_STREAMLIT.md  DEPLOYMENT_IN_DOCKER__AND_DOCKER-COMPOSE.md  PROJECT_HISTORY.md  USER_GUIDE.md
notebooks/: 00_setup_test.ipynb  01_basic_rag_test.ipynb  01_basic_rag_test.ipynb.ipynb
projects/week1_learning_assistant/: README.md  learning_assistant.ipynb
projects/week2_agent_mechanics/: Week2_final_walkthrough.md  advanced_pydantic_ai.py  agent.py  calculation.py  final_walkthrough.md  interact_with_agent.ipynb  manual_agent.py  pydantic_ai_agent.py  test_pydantic_agent.py  week2_manual_agent_doc.md
projects/week4_monitoring_ui/: app.py  debug_pydantic_msgs.py
qdrant_data/: meta.json
research_notes/: Agent_News.md  Docker_CLI_Cheat_Sheet.md  Summary_of_Docker_Tutorial.md
src/: app.py  document_loader.py  vector_store.py
src/agents/: research_agent.py
src/evaluation/: data_generator.py  judges.py  run_benchmark.py
src/models/: schemas.py
src/tools/: get_youtube_transcript.py  perform_web_search.py  research_local_docs.py  save_note.py
src/utils/: agent_logger.py  config.py  document_loader.py  vector_store.py
tests/debug/: debug_youtube.py  debug_youtube_v2.py  debug_youtube_v3.py  (+2 more)
(+12 files in other folders)
